--- a/app/assets/styles/modules/_fixed-header.css
+++ b/app/assets/styles/modules/_fixed-header.css
@@ -15,6 +15,7 @@
     }
 
     & .primary-nav {
+        z-index: 2;
         text-align: center;
         width: 100%;
         @mixin atSmall {
@@ -32,6 +33,7 @@
     }
 
     & .site-header__home-link {
+        z-index: 1;
         cursor: pointer;
         @mixin atSmall {
             position: absolute;
