--- a/app/assets/styles/modules/_page-section.css
+++ b/app/assets/styles/modules/_page-section.css
@@ -10,8 +10,15 @@
     }
 
     &--portfolio {
+        padding-top: 6.875rem;
         background-color: #8f71ab;
         background: linear-gradient(to bottom, #6684c3 0, #9b87b3 0, #6a6195 0, #5d71ab 24.63%, #6f71ab 50%, #7f71ab 75%, #8f71ab 100%);
+        @mixin atSmall {
+            padding-top: 3.2rem;
+        }
+        @mixin atLarge {
+            padding-top: 4.5rem;
+          }
     }
 
     &--about {
